@@ -2,7 +2,9 @@ Version 2.7 (X X, 2016) - ""
 ------------------------------------------------------------------------------
 
 *** ROM SUPPORT *** Thanks to Inkochnito
+Hyperball L-3
 Lethal Weapon 2.03
+Meteor (Bonus Count Fix, 'Fixes a rare bug where the bonus seems to countdown endlessly')
 
 
 
